--- a/html/CSS/style.css
+++ b/html/CSS/style.css
@@ -40,7 +40,7 @@ html, body, .container {
 
 body {
     box-sizing: border-box;
-    padding: 5%;
+    padding: 3%;
     font-family: Roboto, sans-serif;
     font-weight: 400;
     background: linear-gradient(150deg, #000428  0%, #004e92 100%);
@@ -49,8 +49,8 @@ body {
 
 /* ----- navbar ----- */
 .navbar {
-    position: relative;
-    z-index: 1;
+    /* position: relative; */
+    /* z-index: 1; */
 }
 
 
@@ -100,29 +100,37 @@ body {
 /* ----- mainmenu ----- */
 
 .main-title {
+    margin-top: 2%;
+    text-align: center;
     font-size: 48px;
     font-weight: 500;
     color: #fff;
 }
 
 .main-menu {
-    position: absolute;
-    top: 0;
-    right: 5%;
-    overflow-x: hidden;
-    height: 100%;
+    position: relative;
+    width: 100%;
+    /* min-width: auto; */
+    overflow-x: scroll;
+    margin-top: 2%;
+    height: 1000px;
 }
+/* 
+.main-psevdo {
+    width: 100%;
+
+} */
 
 .main-item {
-    max-width: 200px;
-    max-height: 200px;
-    padding: 5px;
+    display: inline-block;
+    height: 180px;
+    overflow: hidden;
+    margin: 5px;
 }
 
 .main-item img {
-    width: auto;
-    height: 50%;
-    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* ----- регистрация и авторизация ----- */
